--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  
-  "type": "module",  
-
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
@@ -21,5 +19,8 @@
     "mongoose": "^8.5.1",
     "nanoid": "^5.0.7",
     "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
