--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-    "build": "npm install && npm install --prefix client && npm run build --prefix client"
+    "start": "node index.js",
+    "build": "npm install && npm install --prefix ../client && npm run build --prefix ../client"
   },
   "keywords": [],
   "author": "",
